docs/api/qiskit/0.33/providers.md
---
title: providers
description: API reference for qiskit.providers
in_page_toc_min_heading_level: 1
python_api_type: module
python_api_name: qiskit.providers
---

<span id="module-qiskit.providers" />

<span id="qiskit-providers" />

# Providers Interface

<span id="module-qiskit.providers" />

`qiskit.providers¶`

This module contains the classes used to build external providers for Terra. A provider is anything that provides an external service to Terra. The typical example of this is a Backend provider which provides [`Backend`](qiskit.providers.Backend#qiskit.providers.Backend "qiskit.providers.Backend") objects which can be used for executing [`QuantumCircuit`](qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") and/or [`Schedule`](qiskit.pulse.Schedule#qiskit.pulse.Schedule "qiskit.pulse.Schedule") objects. This module contains the abstract classes which are used to define the interface between a provider and terra.

## Version Support

<span id="module-qiskit.providers" />

`¶`

Each providers interface abstract class is individually versioned. When we need to make a change to an interface a new abstract class will be created to define the new interface. These interface changes are not guaranteed to be backwards compatible between versions.

### Version Changes[¶](#version-changes "Permalink to this headline")

Each minor version release of qiskit-terra **may** increment the version of any providers interface a single version number. It will be an aggregate of all the interface changes for that release on that interface.

### Version Support Policy[¶](#version-support-policy "Permalink to this headline")

To enable providers to have time to adjust to changes in this interface Terra will support support multiple versions of each class at once. Given the nature of one version per release the version deprecation policy is a bit more conservative than the standard deprecation policy. Terra will support a provider interface version for a minimum of 3 minor releases or the first release after 6 months from the release that introduced a version, whichever is longer, prior to a potential deprecation. After that the standard deprecation policy will apply to that interface version. This will give providers and users sufficient time to adapt to potential breaking changes in the interface. So for example lets say in 0.19.0 `BackendV2` is introduced and in the 3 months after the release of 0.19.0 we release 0.20.0, 0.21.0, and 0.22.0, then 7 months after 0.19.0 we release 0.23.0. In 0.23.0 we can deprecate BackendV2, and it needs to still be supported and can’t be removed until the deprecation policy completes.

It’s worth pointing out that Terra’s version support policy doesn’t mean providers themselves will have the same support story, they can (and arguably should) update to newer versions as soon as they can, the support window is just for Terra’s supported versions. Part of this lengthy window prior to deprecation is to give providers enough time to do their own deprecation of a potential end user impacting change in a user facing part of the interface prior to bumping their version. For example, let’s say we changed the signature to `Backend.run()` in `BackendV34` in a backwards incompatible way, before Aer could update its `AerBackend` class to use version 34 they’d need to deprecate the old signature prior to switching over. The changeover for Aer is not guaranteed to be lockstep with Terra so we need to ensure there is a sufficient amount of time for Aer to complete its deprecation cycle prior to removing version 33 (ie making version 34 mandatory/the minimum version).

## Abstract Classes

<span id="module-qiskit.providers" />

`¶`

### Provider[¶](#provider "Permalink to this headline")

|                                                                                                         |                                                               |
| ------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------- |
| [`Provider`](qiskit.providers.Provider#qiskit.providers.Provider "qiskit.providers.Provider")()         | Base common type for all versioned Provider abstract classes. |
| [`ProviderV1`](qiskit.providers.ProviderV1#qiskit.providers.ProviderV1 "qiskit.providers.ProviderV1")() | Base class for a Backend Provider.                            |

### Backend[¶](#backend "Permalink to this headline")

|                                                                                                                                                 |                                                              |
| ----------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------ |
| [`Backend`](qiskit.providers.Backend#qiskit.providers.Backend "qiskit.providers.Backend")()                                                     | Base common type for all versioned Backend abstract classes. |
| [`BackendV1`](qiskit.providers.BackendV1#qiskit.providers.BackendV1 "qiskit.providers.BackendV1")(configuration\[, provider])                   | Abstract class for Backends                                  |
| [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2")(\[provider, name, description, …])            | Abstract class for Backends                                  |
| [`QubitProperties`](qiskit.providers.QubitProperties#qiskit.providers.QubitProperties "qiskit.providers.QubitProperties")(\[t1, t2, frequency]) | A representation of the properties of a qubit on a backend.  |

### Options[¶](#options "Permalink to this headline")

|                                                                                                       |                     |
| ----------------------------------------------------------------------------------------------------- | ------------------- |
| [`Options`](qiskit.providers.Options#qiskit.providers.Options "qiskit.providers.Options")(\*\*kwargs) | Base options object |

### Job[¶](#job "Permalink to this headline")

|                                                                                                                 |                                                          |
| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------- |
| [`Job`](qiskit.providers.Job#qiskit.providers.Job "qiskit.providers.Job")()                                     | Base common type for all versioned Job abstract classes. |
| [`JobV1`](qiskit.providers.JobV1#qiskit.providers.JobV1 "qiskit.providers.JobV1")(backend, job\_id, \*\*kwargs) | Class to handle jobs                                     |

# Writing a New Provider

<span id="module-qiskit.providers" />

`¶`

If you have a quantum device or simulator that you would like to integrate with Qiskit you will need to write a provider. A provider will provide Terra with a method to get available [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") objects. The [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") object provides both information describing a backend and its operation for the [`transpiler`](transpiler#module-qiskit.transpiler "qiskit.transpiler") so that circuits can be compiled to something that is optimized and can execute on the backend. It also provides the [`run()`](qiskit.providers.BackendV2.run#qiskit.providers.BackendV2.run "qiskit.providers.BackendV2.run") method which can run the [`QuantumCircuit`](qiskit.circuit.QuantumCircuit#qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") objects and/or [`Schedule`](qiskit.pulse.Schedule#qiskit.pulse.Schedule "qiskit.pulse.Schedule") objects. This enables users and other Qiskit APIs, such as [`execute()`](execute#qiskit.execute_function.execute "qiskit.execute_function.execute") and higher level algorithms in [`qiskit.algorithms`](algorithms#module-qiskit.algorithms "qiskit.algorithms"), to get results from executing circuits on devices in a standard fashion regardless of how the backend is implemented. At a high level the basic steps for writing a provider are:

> *   Implement a [`ProviderV1`](qiskit.providers.ProviderV1#qiskit.providers.ProviderV1 "qiskit.providers.ProviderV1") subclass that handles access to the backend(s).
>
> *   Implement a [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") subclass and its [`run()`](qiskit.providers.BackendV2.run#qiskit.providers.BackendV2.run "qiskit.providers.BackendV2.run") method.
>
>     *   Add any custom gates for the backend’s basis to the session [`EquivalenceLibrary`](qiskit.circuit.EquivalenceLibrary#qiskit.circuit.EquivalenceLibrary "qiskit.circuit.EquivalenceLibrary") instance.
>
> *   Implement a [`JobV1`](qiskit.providers.JobV1#qiskit.providers.JobV1 "qiskit.providers.JobV1") subclass that handles interacting with a running job.

For a simple example of a provider, see the [qiskit-aqt-provider](https://github.com/Qiskit-Partners/qiskit-aqt-provider)

## Provider

<span id="module-qiskit.providers" />

`¶`

A provider class serves a single purpose: to get backend objects that enable executing circuits on a device or simulator. The expectation is that any required credentials and/or authentication will be handled in the initialization of a provider object. The provider object will then provide a list of backends, and methods to filter and acquire backends (using the provided credentials if required). An example provider class looks like:

```python
from qiskit.providers import ProviderV1 as Provider
from qiskit.providers.providerutils import filter_backends

from .backend import MyBackend

class MyProvider(Provider):

    def __init__(self, token=None):
        super().__init__()
        self.token = token
        self.backends = [MyBackend(provider=self)]

    def backends(self, name=None, **kwargs):
        if name:
            backends = [
                backend for backend in backends if backend.name() == name]
        return filter_backends(backends, filters=filters, **kwargs)
```

Ensure that any necessary information for authentication (if required) are present in the class and that the backends method matches the required interface. The rest is up to the specific provider on how to implement.

## Backend

<span id="module-qiskit.providers" />

`¶`

The backend classes are the core to the provider. These classes are what provide the interface between Qiskit and the hardware or simulator that will execute circuits. This includes providing the necessary information to describe a backend to the compiler so that it can embed and optimize any circuit for the backend. There are 4 required things in every backend object: a [`target`](qiskit.providers.BackendV2#qiskit.providers.BackendV2.target "qiskit.providers.BackendV2.target") property to define the model of the backend for the compiler, a [`max_circuits`](qiskit.providers.BackendV2#qiskit.providers.BackendV2.max_circuits "qiskit.providers.BackendV2.max_circuits") property to define a limit on the number of circuits the backend can execute in a single batch job (if there is no limit `None` can be used), a [`run()`](qiskit.providers.BackendV2.run#qiskit.providers.BackendV2.run "qiskit.providers.BackendV2.run") method to accept job submissions, and a `_default_options` method to define the user configurable options and their default values. For example, a minimum working example would be something like:

```python
from qiskit.providers import BackendV2 as Backend
from qiskit.transpiler import Target
from qiskit.providers import Options
from qiskit.circuit import Parameter, Measure
from qiskit.circuit.library import PhaseGate, SXGate, UGate, CXGate, IGate


class Mybackend(Backend):

    def __init__(self):
        super().__init__()

        # Create Target
        self._target = Target("Target for My Backend")
        # Instead of None for this and below instructions you can define
        # a qiskit.transpiler.InstructionProperties object to define properties
        # for an instruction.
        lam = Parameter("λ")
        p_props = {(qubit,): None for qubit in range(5)}
        self._target.add_instruction(PhaseGate(lam), p_props)
        sx_props = {(qubit,): None for qubit in range(5)}
        self._target.add_instruction(SXGate(), sx_props)
        phi = Parameter("φ")
        theta = Parameter("ϴ")
        u_props = {(qubit,): None for qubit in range(5)}
        self._target.add_instruction(UGate(theta, phi, lam), u_props)
        cx_props = {edge: None for edge in [(0, 1), (1, 2), (2, 3), (3, 4)]}
        self._target.add_instruction(CXGate(), cx_props)
        meas_props = {(qubit,): None for qubit in range(5)}
        self._target.add_instruction(Measure(), meas_props)
        id_props = {(qubit,): None for qubit in range(5)}
        self._target.add_instruction(IGate(), id_props)

        # Set option validators
        self.options.set_validator("shots", (1, 4096))
        self.options.set_validator("memory", bool)

    @property
    def target(self):
        return self._target

    @property
    def max_circuits(self):
        return 1024

    @classmethod
    def _default_options(cls):
        return Options(shots=1024, memory=False)

    def run(circuits, **kwargs):
        # serialize circuits submit to backend and create a job
        for kwarg in kwargs:
            if not hasattr(kwarg, self.options):
                warnings.warn(
                    "Option %s is not used by this backend" % kwarg,
                    UserWarning, stacklevel=2)
        options = {
            'shots': kwargs.get('shots', self.options.shots),
            'memory': kwargs.get('memory', self.options.shots),
        }
        job_json = convert_to_wire_format(circuit, options)
        job_handle = submit_to_backend(job_jsonb)
        return MyJob(self. job_handle, job_json, circuit)
```

### Transpiler Interface[¶](#transpiler-interface "Permalink to this headline")

The key piece of the [`Backend`](qiskit.providers.Backend#qiskit.providers.Backend "qiskit.providers.Backend") object is how it describes itself to the compiler. This is handled with the [`Target`](qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target") class which defines a model of a backend for the transpiler. A backend object will need to return a [`Target`](qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target") object from the [`target`](qiskit.providers.BackendV2#qiskit.providers.BackendV2.target "qiskit.providers.BackendV2.target") attribute which the [`transpile()`](qiskit.compiler.transpile#qiskit.compiler.transpile "qiskit.compiler.transpile") function will use as its model of a backend target for compilation.

#### Custom Basis Gates[¶](#custom-basis-gates "Permalink to this headline")

1.  If your backend doesn’t use gates in the Qiskit circuit library ([`qiskit.circuit.library`](circuit_library#module-qiskit.circuit.library "qiskit.circuit.library")) you can integrate support for this into your provider. The basic method for doing this is first to define a [`Gate`](qiskit.circuit.Gate#qiskit.circuit.Gate "qiskit.circuit.Gate") subclass for each custom gate in the basis set. For example:

    ```python
    import numpy as np

    from qiskit.circuit import Gate
    from qiskit.circuit import QuantumCircuit

    class SYGate(Gate):
        def __init__(self, label=None):
            super().__init__("sy", 1, [], label=label)

        def _define(self):
            qc = QuantumCircuit(1)
            q.ry(np.pi / 2, 0)
            self.definition = qc
    ```

    The key thing to ensure is that for any custom gates in your Backend’s basis set your custom gate’s name attribute (the first param on `super().__init__()` in the `__init__` definition above) does not conflict with the name of any other gates. The name attribute is what is used to identify the gate in the basis set for the transpiler. If there is a conflict the transpiler will not know which gate to use.

2.  Add the custom gate to the target for your backend. This can be done with the [`Target.add_instruction()`](qiskit.transpiler.Target.add_instruction#qiskit.transpiler.Target.add_instruction "qiskit.transpiler.Target.add_instruction") method. You’ll need to add an instance of `SYGate` and its parameters to the target so the transpiler knows it exists. For example, assuming this is part of your [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") implementation for your backend:

    ```python
    from qiskit.transpiler import InstructionProperties

    sy_props = {
        (0,): InstructionProperties(duration=2.3e-6, error=0.0002)
        (1,): InstructionProperties(duration=2.1e-6, error=0.0001)
        (2,): InstructionProperties(duration=2.5e-6, error=0.0003)
        (3,): InstructionProperties(duration=2.2e-6, error=0.0004)
    }
    self.target.add_instruction(SYGate(), sy_props)
    ```

    The keys in `sy_props` define the qubits on the backend `SYGate` can be used on, and the values define the properties of `SYGate` on that qubit. For multiqubit gates the tuple keys contain all qubit combinations the gate works on (order is significant, i.e. `(0, 1)` is different from `(1, 0)`).

3.  After you’ve defined the custom gates to use for the backend’s basis set then you need to add equivalence rules to the standard equivalence library so that the [`transpile()`](qiskit.compiler.transpile#qiskit.compiler.transpile "qiskit.compiler.transpile") function and [`transpiler`](transpiler#module-qiskit.transpiler "qiskit.transpiler") module can convert an arbitrary circuit using the custom basis set. This can be done by defining equivalent circuits, in terms of the custom gate, for standard gates. Typically if you can convert from a [`CXGate`](qiskit.circuit.library.CXGate#qiskit.circuit.library.CXGate "qiskit.circuit.library.CXGate") (if your basis doesn’t include a standard 2 qubit gate) and some commonly used single qubit rotation gates like the [`HGate`](qiskit.circuit.library.HGate#qiskit.circuit.library.HGate "qiskit.circuit.library.HGate") and [`UGate`](qiskit.circuit.library.UGate#qiskit.circuit.library.UGate "qiskit.circuit.library.UGate") that should be sufficient for the transpiler to translate any circuit into the custom basis gates. But, the more equivalence rules that are defined from standard gates to your basis the more efficient translation from an arbitrary circuit to the target basis will be (although not always, and there is a diminishing margin of return).

    For example, if you were to add some rules for the above custom `SYGate` we could define the [`U2Gate`](qiskit.circuit.library.U2Gate#qiskit.circuit.library.U2Gate "qiskit.circuit.library.U2Gate") and [`HGate`](qiskit.circuit.library.HGate#qiskit.circuit.library.HGate "qiskit.circuit.library.HGate"):

    ```python
    from qiskit.circuit.equivalence_library import SessionEquivalenceLibrary
    from qiskit.circuit.library import HGate
    from qiskit.circuit.library import ZGate
    from qiskit.circuit.library import RZGate
    from qiskit.circuit.library import U2Gate


    # H => Z SY
    q = qiskit.QuantumRegister(1, "q")
    def_sy_h = qiskit.QuantumCircuit(q)
    def_sy_h.append(ZGate(), [q[0]], [])
    def_sy_h.append(SYGate(), [q[0]], [])
    SessionEquivalenceLibrary.add_equivalence(
        HGate(), def_sy_h)

    # u2 => Z SY Z
    phi = qiskit.circuit.Parameter('phi')
    lam = qiskit.circuit.Parameter('lambda')
    q = qiskit.QuantumRegister(1, "q")
    def_sy_u2 = qiskit.QuantumCircuit(q)
    def_sy_u2.append(RZGate(lam), [q[0]], [])
    def_sy_u2.append(SYGate(), [q[0]], [])
    def_sy_u2.append(RZGate(phi), [q[0]], [])
    SessionEquivalenceLibrary.add_equivalence(
        U2Gate(phi, lam), def_sy_u2)
    ```

    You will want this to be run on import so that as soon as the provider’s package is imported it will be run. This will ensure that any time the [`BasisTranslator`](qiskit.transpiler.passes.BasisTranslator#qiskit.transpiler.passes.BasisTranslator "qiskit.transpiler.passes.BasisTranslator") pass is run with the custom gates the equivalence rules are defined.

    It’s also worth noting that depending on the basis you’re using, some optimization passes in the transpiler, such as [`Optimize1qGatesDecomposition`](qiskit.transpiler.passes.Optimize1qGatesDecomposition#qiskit.transpiler.passes.Optimize1qGatesDecomposition "qiskit.transpiler.passes.Optimize1qGatesDecomposition"), may not be able to operate with your custom basis. For our `SYGate` example, the [`Optimize1qGatesDecomposition`](qiskit.transpiler.passes.Optimize1qGatesDecomposition#qiskit.transpiler.passes.Optimize1qGatesDecomposition "qiskit.transpiler.passes.Optimize1qGatesDecomposition") will not be able to simplify runs of single qubit gates into the SY basis. This is because the [`OneQubitEulerDecomposer`](qiskit.quantum_info.OneQubitEulerDecomposer#qiskit.quantum_info.OneQubitEulerDecomposer "qiskit.quantum_info.OneQubitEulerDecomposer") class does not know how to work in the SY basis. To solve this the `SYGate` class would need to be added to Qiskit and [`OneQubitEulerDecomposer`](qiskit.quantum_info.OneQubitEulerDecomposer#qiskit.quantum_info.OneQubitEulerDecomposer "qiskit.quantum_info.OneQubitEulerDecomposer") updated to support decomposing to the `SYGate`. Longer term that is likely a better direction for custom basis gates and contributing the definitions and support in the transpiler will ensure that it continues to be well supported by Qiskit moving forward.

### Run Method[¶](#run-method "Permalink to this headline")

Of key importance is the [`run()`](qiskit.providers.BackendV2.run#qiskit.providers.BackendV2.run "qiskit.providers.BackendV2.run") method, which is used to actually submit circuits to a device or simulator. The run method handles submitting the circuits to the backend to be executed and returning a [`Job`](qiskit.providers.Job#qiskit.providers.Job "qiskit.providers.Job") object. Depending on the type of backend this typically involves serializing the circuit object into the API format used by a backend. For example, on IBMQ backends from the `qiskit-ibmq-provider` package this involves converting from a quantum circuit and options into a [qobj](https://arxiv.org/abs/1809.03452) JSON payload and submitting that to the IBM Quantum API. Since every backend interface is different (and in the case of the local simulators serialization may not be needed) it is expected that the backend’s [`run`](qiskit.providers.BackendV2.run#qiskit.providers.BackendV2.run "qiskit.providers.BackendV2.run") method will handle this conversion.

An example run method would be something like:

```python
def run(self, circuits. **kwargs):
    for kwarg in kwargs:
        if not hasattr(kwarg, self.options):
            warnings.warn(
                "Option %s is not used by this backend" % kwarg,
                UserWarning, stacklevel=2)
    options = {
        'shots': kwargs.get('shots', self.options.shots)
        'memory': kwargs.get('memory', self.options.shots),
    }
    job_json = convert_to_wire_format(circuit, options)
    job_handle = submit_to_backend(job_jsonb)
    return MyJob(self. job_handle, job_json, circuit)
```

### Options[¶](#id3 "Permalink to this headline")

There are often several options for a backend that control how a circuit is run. The typical example of this is something like the number of `shots` which is how many times the circuit is to be executed. The options available for a backend are defined using an [`Options`](qiskit.providers.Options#qiskit.providers.Options "qiskit.providers.Options") object. This object is initially created by the `_default_options` method of a Backend class. The default options returns an initialized [`Options`](qiskit.providers.Options#qiskit.providers.Options "qiskit.providers.Options") object with all the default values for all the options a backend supports. For example, if the backend supports only supports `shots` the `_default_options` method would look like:

```python
@classmethod
def _default_options(cls):
    return Options(shots=1024)
```

You can also set validators on an [`Options`](qiskit.providers.Options#qiskit.providers.Options "qiskit.providers.Options") object to provide limits and validation on user provided values based on what’s acceptable for your backend. For example, if the `"shots"` option defined above can be set to any value between 1 and 4096 you can set the validator on the options object for you backend with:

```python
self.options.set_validator("shots", (1, 4096))
```

you can refer to the [`set_validator()`](qiskit.providers.Options.set_validator#qiskit.providers.Options.set_validator "qiskit.providers.Options.set_validator") documentation for a full list of validation options.

## Job

<span id="module-qiskit.providers" />

`¶`

The output from the [`run`](qiskit.providers.BackendV2.run#qiskit.providers.BackendV2.run "qiskit.providers.BackendV2.run") method is a [`JobV1`](qiskit.providers.JobV1#qiskit.providers.JobV1 "qiskit.providers.JobV1") object. Each provider is expected to implement a custom job subclass that defines the behavior for the provider. There are 2 types of jobs depending on the backend’s execution method, either a sync or async. By default jobs are considered async and the expectation is that it represents a handle to the async execution of the circuits submitted with `Backend.run()`. An async job object provides users the ability to query the status of the execution, cancel a running job, and block until the execution is finished. The [`result`](qiskit.providers.JobV1.result#qiskit.providers.JobV1.result "qiskit.providers.JobV1.result") is the primary user facing method which will block until the execution is complete and then will return a [`Result`](qiskit.result.Result#qiskit.result.Result "qiskit.result.Result") object with results of the job.

For some backends (mainly local simulators) the execution of circuits is a synchronous operation and there is no need to return a handle to a running job elsewhere. For sync jobs its expected that the [`run`](qiskit.providers.BackendV1.run#qiskit.providers.BackendV1.run "qiskit.providers.BackendV1.run") method on the backend will block until a [`Result`](qiskit.result.Result#qiskit.result.Result "qiskit.result.Result") object is generated and the sync job will return with that inner [`Result`](qiskit.result.Result#qiskit.result.Result "qiskit.result.Result") object.

An example job class for an async API based backend would look something like:

```python
from qiskit.providers import JobV1 as Job
from qiskit.providers import JobError
from qiskit.providers import JobTimeoutError
from qiskit.providers.jobstatus import JobStatus
from qiskit.result import Result


class MyJob(Job):
    def __init__(self, backend, job_id, job_json, circuits):
        super().__init__(backend, job_id)
        self._backend = backend
        self.job_json = job_json
        self.circuits = circuits

    def _wait_for_result(self, timeout=None, wait=5):
        start_time = time.time()
        result = None
        while True:
            elapsed = time.time() - start_time
            if timeout and elapsed >= timeout:
                raise JobTimeoutError('Timed out waiting for result')
            result = get_job_status(self._job_id)
            if result['status'] == 'complete':
                break
            if result['status'] == 'error':
                raise JobError('Job error')
            time.sleep(wait)
        return result

    def result(self, timeout=None, wait=5):
        result = self._wait_for_result(timeout, wait)
        results = [{'success': True, 'shots': len(result['counts']),
                    'data': result['counts']}]
        return Result.from_dict({
            'results': results,
            'backend_name': self._backend.configuration().backend_name,
            'backend_version': self._backend.configuration().backend_version,
            'job_id': self._job_id,
            'qobj_id': ', '.join(x.name for x in self.circuits),
            'success': True,
        })

    def status(self):
        result = get_job_status(self._job_id)
        if result['status'] == 'running':
            status = JobStatus.RUNNING
        elif result['status'] == 'complete':
            status = JobStatus.DONE
        else:
            status = JobStatus.ERROR
        return status

def submit(self):
    raise NotImplementedError
```

and for a sync job:

```python
class MySyncJob(Job):
    _async = False

    def __init__(self, backend, job_id, result):
        super().__init__(backend, job_id)
        self._result = result

    def submit(self):
        return

    def result(self):
        return self._result

    def status(self):
        return JobStatus.DONE
```

# Migrating between Backend API Versions

<span id="module-qiskit.providers" />

`¶`

## BackendV1 -> BackendV2

<span id="module-qiskit.providers" />

`¶`

The [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") class re-defined user access for most properties of a backend to make them work with native Qiskit data structures and have flatter access patterns. However this means when using a provider that upgrades from [`BackendV1`](qiskit.providers.BackendV1#qiskit.providers.BackendV1 "qiskit.providers.BackendV1") to [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") existing access patterns will need to be adjusted. It is expected for existing providers to deprecate the old access where possible to provide a graceful migration, but eventually users will need to adjust code. The biggest change to adapt to in [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") is that most of the information accesible about a backend is contained in its [`Target`](qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target") object and the backend’s attributes often query its [`target`](qiskit.providers.BackendV2#qiskit.providers.BackendV2.target "qiskit.providers.BackendV2.target") attribute to return information, however in many cases the attributes only provide a subset of information the target can contain. For example, `backend.coupling_map` returns a [`CouplingMap`](qiskit.transpiler.CouplingMap#qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") constructed from the [`Target`](qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target") accesible in the [`target`](qiskit.providers.BackendV2#qiskit.providers.BackendV2.target "qiskit.providers.BackendV2.target") attribute, however the target may contain instructions that operate on more than two qubits (which can’t be represented in a [`CouplingMap`](qiskit.transpiler.CouplingMap#qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")) or has instructions that only operate on a subset of qubits (or two qubit links for a two qubit instruction) which won’t be detailed in the full coupling map returned by [`coupling_map`](qiskit.providers.BackendV2#qiskit.providers.BackendV2.coupling_map "qiskit.providers.BackendV2.coupling_map"). So depending on your use case it might be necessary to look deeper than just the equivalent access with [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2").

Below is a table of example access patterns in [`BackendV1`](qiskit.providers.BackendV1#qiskit.providers.BackendV1 "qiskit.providers.BackendV1") and the new form with [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2"):

| [`BackendV1`](qiskit.providers.BackendV1#qiskit.providers.BackendV1 "qiskit.providers.BackendV1") | [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") | Notes                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `backend.configuration().n_qubits`                                                                | `backend.num_qubits`                                                                              |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.configuration().coupling_map`                                                            | `backend.coupling_map`                                                                            | The return from [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") is a [`CouplingMap`](qiskit.transpiler.CouplingMap#qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap") object. while in [`BackendV1`](qiskit.providers.BackendV1#qiskit.providers.BackendV1 "qiskit.providers.BackendV1") it is an edge list. Also this is just a view of the information contained in `backend.target` which may only be a subset of the information contained in [`Target`](qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target") object. |
| `backend.configuration().backend_name`                                                            | `backend.name`                                                                                    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.configuration().backend_version`                                                         | `backend.backend_version`                                                                         | The [`version`](qiskit.providers.BackendV2#qiskit.providers.BackendV2.version "qiskit.providers.BackendV2.version") attribute represents the version of the abstract [`Backend`](qiskit.providers.Backend#qiskit.providers.Backend "qiskit.providers.Backend") interface the object implements while `backend_version` is metadata about the version of the backend itself.                                                                                                                                                                                                                                      |
| `backend.configuration().basis_gates`                                                             | `backend.operation_names`                                                                         | The [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") return is a list of operation names contained in the `backend.target` attribute. The [`Target`](qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target") may contain more information that can be expressed by this list of names. For example, that some operations only work on a subset of qubits or that some names implement the same gate with different parameters.                                                                                                            |
| `backend.configuration().dt`                                                                      | `backend.dt`                                                                                      |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.configuration().dtm`                                                                     | `backend.dtm`                                                                                     |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.configuration().max_experiments`                                                         | `backend.max_circuits`                                                                            |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.configuration().online_date`                                                             | `backend.online_date`                                                                             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `InstructionDurations.from_backend(backend)`                                                      | `backend.instruction_durations`                                                                   |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.defaults().instruction_schedule_map`                                                     | `backend.instruction_schedule_map`                                                                |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.properties().t1(0)`                                                                      | `backend.qubit_properties(0).t1`                                                                  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.properties().t2(0)`                                                                      | `backend.qubit_properties(0).t2`                                                                  |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.properties().frequency(0)`                                                               | `backend.qubit_properties(0).frequency`                                                           |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |
| `backend.properties().readout_error(0)`                                                           | `backend.target["measure"][(0,)].error`                                                           | In [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") the error rate for the [`Measure`](qiskit.circuit.Measure#qiskit.circuit.Measure "qiskit.circuit.Measure") operation on a given qubit is used to model the readout error. However a [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") can implement multiple measurement types and list them separately in a [`Target`](qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target").                                                      |
| `backend.properties().readout_length(0)`                                                          | `backend.target["measure"][(0,)].duration`                                                        | In [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") the duration for the [`Measure`](qiskit.circuit.Measure#qiskit.circuit.Measure "qiskit.circuit.Measure") operation on a given qubit is used to model the readout length. However, a [`BackendV2`](qiskit.providers.BackendV2#qiskit.providers.BackendV2 "qiskit.providers.BackendV2") can implement multiple measurement types and list them separately in a [`Target`](qiskit.transpiler.Target#qiskit.transpiler.Target "qiskit.transpiler.Target").                                                      |

# Legacy Provider Interface Base Objects

<span id="module-qiskit.providers" />

`qiskit.providers¶`

These abstract interfaces are deprecated and will be removed in a future release. The documentation here is left for reference purposes while they’re still supported, but if you’re creating or maintaining a provider you should be using the versioned interface.

## Base Objects

<span id="module-qiskit.providers" />

`¶`

|                                                                                                                                       |                                                     |
| ------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------- |
| [`BaseProvider`](qiskit.providers.BaseProvider#qiskit.providers.BaseProvider "qiskit.providers.BaseProvider")(\*args, \*\*kwargs)     | Base class for a Backend Provider.                  |
| [`BaseBackend`](qiskit.providers.BaseBackend#qiskit.providers.BaseBackend "qiskit.providers.BaseBackend")(configuration\[, provider]) | Legacy Base class for backends.                     |
| [`BaseJob`](qiskit.providers.BaseJob#qiskit.providers.BaseJob "qiskit.providers.BaseJob")(backend, job\_id)                           | DEPRECATED Legacy Class to handle asynchronous jobs |

## Job Status

<span id="module-qiskit.providers" />

`¶`

|                                                                                                          |                                       |
| -------------------------------------------------------------------------------------------------------- | ------------------------------------- |
| [`JobStatus`](qiskit.providers.JobStatus#qiskit.providers.JobStatus "qiskit.providers.JobStatus")(value) | Class for job status enumerated type. |

## Exceptions

<span id="module-qiskit.providers" />

`¶`

|                                                                                                                                                                                  |                                                                    |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------ |
| [`QiskitBackendNotFoundError`](qiskit.providers.QiskitBackendNotFoundError#qiskit.providers.QiskitBackendNotFoundError "qiskit.providers.QiskitBackendNotFoundError")(\*message) | Base class for errors raised while looking for a backend.          |
| [`BackendPropertyError`](qiskit.providers.BackendPropertyError#qiskit.providers.BackendPropertyError "qiskit.providers.BackendPropertyError")(\*message)                         | Base class for errors raised while looking for a backend property. |
| [`JobError`](qiskit.providers.JobError#qiskit.providers.JobError "qiskit.providers.JobError")(\*message)                                                                         | Base class for errors raised by Jobs.                              |
| [`JobTimeoutError`](qiskit.providers.JobTimeoutError#qiskit.providers.JobTimeoutError "qiskit.providers.JobTimeoutError")(\*message)                                             | Base class for timeout errors raised by jobs.                      |

